OVac.cydsn/Pressure_Harbor_test.cydsn/CortexM3/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 05/12/2017 16:56:58 Project: Pressure_Harbor_test, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I..\emFile_V322c\Code\Include\PSoC5 -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c main.c -o .\CortexM3\ARM_GCC_493\Debug\main.o
main.c: In function 'main':
main.c:87:46: error: 'gyroZ' undeclared (first use in this function)
         MPU6050_getRotation(&gyroX, &gyroY, &gyroZ);
                                              ^
main.c:87:46: note: each undeclared identifier is reported only once for each function it appears in
main.c:145:1: warning: multi-line comment [-Wcomment]
 //                        sprintf(sdbuf, "(%ld)pressure: %d.%04d, %d\n", press_id, \
 ^
main.c:51:46: warning: unused variable 'pressure_avg' [-Wunused-variable]
     float voltage = 0, temp = 0, output = 0, pressure_avg = 0;       // ADC Voltage conversion variables
                                              ^
main.c:51:34: warning: unused variable 'output' [-Wunused-variable]
     float voltage = 0, temp = 0, output = 0, pressure_avg = 0;       // ADC Voltage conversion variables
                                  ^
main.c:51:24: warning: unused variable 'temp' [-Wunused-variable]
     float voltage = 0, temp = 0, output = 0, pressure_avg = 0;       // ADC Voltage conversion variables
                        ^
main.c:51:11: warning: unused variable 'voltage' [-Wunused-variable]
     float voltage = 0, temp = 0, output = 0, pressure_avg = 0;       // ADC Voltage conversion variables
           ^
main.c:50:18: warning: unused variable 'decimals' [-Wunused-variable]
     int num = 0, decimals = 0;                                       // ADC Voltage conversion placeholders
                  ^
main.c:50:9: warning: unused variable 'num' [-Wunused-variable]
     int num = 0, decimals = 0;                                       // ADC Voltage conversion placeholders
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/12/2017 16:57:00 ---------------
